# trabajoAdelantadoCC6908

./: README.md
MonaEngine/: .gitignore  CMakeLists.txt  LICENSE  README.md  config.cfg
MonaEngine/Assets/Animations/: idle.fbx  jump.fbx  left strafe walking.fbx  left strafe.fbx  left turn 90.fbx  left turn.fbx  right strafe walking.fbx  right strafe.fbx  right turn 90.fbx  right turn.fbx  running.fbx  walking.fbx
MonaEngine/Assets/Animations/female/: idle.fbx  jump.fbx  left strafe walk.fbx  left strafe.fbx  left turn.fbx  right strafe walk.fbx  right strafe.fbx  right turn.fbx  running.fbx  walking.fbx
MonaEngine/Assets/Models/: xbot.fbx
MonaEngine/CMakeConfigFiles/: RootDirectory.hpp.in
MonaEngine/examples/: AnimationAudioExample.cpp  Breakout.cpp  CMakeLists.txt  ExampleFABRIK.cpp  ExampleIKChain.cpp  MinimalSetup.cpp  WindowInputExample.cpp
MonaEngine/source/: Application.cpp  Application.hpp  CMakeLists.txt  Engine.hpp  MonaEngine.hpp
MonaEngine/source/Animation/: AnimationClip.cpp  AnimationClip.hpp  AnimationClipManager.cpp  AnimationClipManager.hpp  AnimationController.cpp  AnimationController.hpp  AnimationSystem.cpp  AnimationSystem.hpp  CrossFadeTarget.hpp  JointPose.hpp  SkeletalMeshComponent.hpp  Skeleton.cpp  Skeleton.hpp  SkeletonManager.cpp  SkeletonManager.hpp  SkinnedMesh.cpp  SkinnedMesh.hpp
MonaEngine/source/Audio/: AudioClip.cpp  AudioClip.hpp  AudioClipManager.cpp  AudioClipManager.hpp  AudioMacros.hpp  AudioSource.hpp  AudioSourceComponent.cpp  AudioSourceComponent.hpp  AudioSourceComponentLifetimePolicy.hpp  AudioSystem.cpp  AudioSystem.hpp
MonaEngine/source/Core/: AssimpTransformations.hpp  Common.hpp  Config.cpp  Config.hpp  Log.hpp
MonaEngine/source/DebugDrawing/: BulletDebugDraw.cpp  BulletDebugDraw.hpp  DebugDrawingSystem.cpp  DebugDrawingSystem.hpp  ImGuiBuild.cpp
MonaEngine/source/Event/: EventManager.cpp  EventManager.hpp  Events.hpp
MonaEngine/source/IK/: FABRIKSolver.cpp  FABRIKSolver.hpp  IKSolver.hpp  IKUtils.hpp  SimpleIKChain.cpp  SimpleIKChain.hpp
MonaEngine/source/PhysicsCollision/: CollisionInformation.hpp  CustomMotionState.hpp  PhysicsCollisionEvents.hpp  PhysicsCollisionSystem.cpp  PhysicsCollisionSystem.hpp  RaycastResults.hpp  RigidBodyComponent.hpp  RigidBodyLifetimePolicy.hpp  ShapeTypes.hpp
MonaEngine/source/Platform/: Input.cpp  Input.hpp  KeyCodes.hpp  Window.cpp  Window.hpp
MonaEngine/source/Rendering/: CameraComponent.hpp  DiffuseFlatMaterial.hpp  DiffuseTexturedMaterial.hpp  DirectionalLightComponent.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshManager.cpp  MeshManager.hpp  PBRFlatMaterial.hpp  PBRTexturedMaterial.hpp  PointLightComponent.hpp  Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  SpotLightComponent.hpp  StaticMeshComponent.hpp  Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp  UnlitFlatMaterial.hpp  UnlitTexturedMaterial.hpp
MonaEngine/source/Rendering/Shaders/: DiffuseFlat.ps  DiffuseFlat.vs  DiffuseFlatSkinning.vs  DiffuseTextured.ps  DiffuseTextured.vs  DiffuseTexturedSkinning.vs  LinePS.ps  LineVS.vs  PBRFlat.ps  PBRFlat.vs  PBRFlatSkinning.vs  PBRTextured.ps  PBRTextured.vs  PBRTexturedSkinning.vs  UnlitFlat.ps  UnlitFlat.vs  UnlitFlatSkinning.vs  UnlitTextured.ps  UnlitTextured.vs  UnlitTexturedSkinning.vs
MonaEngine/source/Utilities/: BasicCameraControllers.hpp
MonaEngine/source/World/: ComponentHandle.hpp  ComponentManager.hpp  ComponentTypes.hpp  GameObject.hpp  GameObjectHandle.hpp  GameObjectManager.cpp  GameObjectManager.hpp  GameObjectTypes.hpp  TransformComponent.hpp  World.cpp  World.hpp
MonaEngine/source/World/Detail/: ComponentManager_Implementation.hpp  GameObjectManager_Implementation.hpp  World_Implementation.hpp
MonaEngine/tests/: CMakeLists.txt  Test002_World.cpp
